# prodapt

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
config/: config.yaml  push_t.yaml  ur10.yaml  ur10_cube.yaml  ur10_heart.yaml
docker/: docker-compose.yml
docker/prodapt/: Dockerfile  entrypoint.sh
docker/prodapt/scripts/: .bashrc  install_dependencies.bash
docker/ur-driver/: Dockerfile  entrypoint.sh
docker/ursim/: Dockerfile
docker/ursim/programs/: default.installation
docs/: docker.md  isaacsim.md  isaacsim_data_collection.md  real_experiments.md  simulation_experiments.md  spacemouse.md  ur10_data_collection.md  ursim.md
resources/: ur10_prodapt.usd
scripts/: download_gdrive_data.py  download_push_t_data.bash  download_push_t_weights.bash  install.bash  plotting.py  run_experiment.bash  run_isaacsim.bash  test_all_models.sh  train_model.sh
src/prodapt/: README.md  diffusion_policy.py  main.py  trainer.py
src/prodapt/dataset/: bag_file_parser.py  dataset_utils.py  process_cube_data.py  process_heart_data.py  process_ur10_data.py  push_t_data.py  state_dataset.py
src/prodapt/diffusion/: conditional_unet_1d.py  transformer_for_diffusion.py
src/prodapt/envs/: push_t.py  push_t_env.py  ur10_env.py
src/prodapt/envs/ur10_ros_interface/: force_subscriber.py  joint_states_subscriber.py  joints_publisher.py  movel_publisher.py
src/prodapt/utils/: keypoint_manager.py  kinematics_utils.py  rotation_utils.py
src/simulator_isaac/: cube_bypass.py  force_publisher.py  main.py  simulator.py  ur10e.py
src/spacenav_converter/: package.xml  setup.cfg  setup.py
src/spacenav_converter/spacenav_converter/: converter.py  converter_joints.py  converter_movel.py
src/spacenav_to_movel/: package.xml  setup.cfg  setup.py
src/spacenav_to_movel/spacenav_to_movel/: converter.py  joint_states_subscriber.py  movel_publisher.py
