[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prodapt"
version = "0.0.1"
dependencies = [
  "gdown",
  "opencv-python",
  "torch==2.2.1",
  "torchvision",
  "diffusers==0.18.2",
  "scikit-image==0.19.3",
  "scikit-video==1.1.11",
  "zarr==2.12.0",
  "numcodecs==0.12.1",
  "pygame==2.1.3.dev8",
  "pymunk==6.2.1",
  "gym==0.26.2",
  "shapely==1.8.5",
  "hydra-core==1.3.2",
  "ipython>=8.18.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/prodapt"]

requires-python = ">=3.9"
authors = [
  {name = "Bryson Jones", email = "bryson.jones@jpl.nasa.gov"}
]
maintainers = [
  {name = "Bryson Jones", email = "bryson.jones@jpl.nasa.gov"}
]
description = "A package for proprioceptive adaptation methods for robotics manipulation"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["robotics", "manipulation", "adaptation", "proprioception"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

