[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prodapt"
version = "0.0.1"
dependencies = [
  "gdown~=5.1.0",
  "opencv-python~=4.9.0.80",
  "torch==2.2.1+cu118",
  "diffusers~=0.18.2",
  "scikit-image~=0.19.3",
  "scikit-video~=1.1.11",
  "zarr~=2.12.0",
  "pygame~=2.1.3",
  "pymunk~=6.2.1",
  "gymnasium~=0.29.1",
  "shapely~=1.8.5",
  "hydra-core~=1.3.2",
  "ipython~=8.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prodapt"]

requires-python = "~=3.8"
authors = [
  {name = "Bryson Jones", email = "bryson.jones@jpl.nasa.gov"}
]
maintainers = [
  {name = "Federico Pizarro Bejarano", email = "bejarano@jpl.nasa.gov"}
]
description = "A package for proprioceptive adaptation methods for robotics manipulation"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["robotics", "manipulation", "adaptation", "proprioception"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

