<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spacenav_converter</name>
  <version>0.0.0</version>
  <description>Converts Spacenav messages from 3D mouse to different messages to command UR10.</description>
  <maintainer email="bejarano@jpl.nasa.gov">bejarano</maintainer>
  <license>Copyright 2024 NASA Jet Propulsion Laboratory</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
